src/objects/Treatment_Quote__c.object
<CustomObject>
    <description>Quotes to send to patients.</description>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Bill To City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Bill To Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Name__c</fullName>
        <label>Doctor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>when will this quote expire</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Location__c</fullName>
        <label>Facility Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ground_Transportation_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Transportation Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Nights Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Nights_Needed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hotel Nights Needed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Bill To Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Hospital_Nights__c</fullName>
        <label>Number of Hospital Nights</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <label>Patient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Treatment Quotes</relationshipLabel>
        <relationshipName>Treatment_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <description>Bill To Postal</description>
        <label>Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Date__c</fullName>
        <label>Procedure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>Bill To Province</description>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Bill to Street</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Treatment Quotes</relationshipLabel>
        <relationshipName>Treatment_Treatment_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Treatment Quote</label>
    <nameField>
        <displayFormat>IQ{00000000}</displayFormat>
        <label>Interaction Quote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>